# minions

./: .editorconfig  Cargo.toml
assets/prefab/: sphere.ron
config/: config.ron  display.ron  input.ron
src/: bundle.rs  config.rs  input.rs  main.rs  minions.rs
src/components/: camera.rs  mod.rs  world.rs
src/systems/: camera.rs  hover_system.rs  mod.rs
