[package]
authors = ["Septias <39526136+Septias@users.noreply.github.com>"]
edition = "2018"
name = "minions"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
amethyst = {version = "0.15.2", features = ["no-slow-safety-checks"]}
log = {version = "0.4.8", features = ["serde"]}
serde = {version = "1.0.104", features = ["derive"]}

[features]
default = ["vulkan"]
empty = ["amethyst/empty"]
metal = ["amethyst/metal"]
vulkan = ["amethyst/vulkan"]
